--- a/modules/core/client/less/dashboard.less
+++ b/modules/core/client/less/dashboard.less
@@ -117,6 +117,7 @@
       text-align: center;
       padding: 2.5%;
       max-width: 200px;
+      min-height: 150px;
 
       @media (max-width: 768px) {
         min-width: 26%;
